tests/errors/preprocessor/temporarily_unemployed/multifile/include/no_extension/one.c
#include "two.c"


void first_file_func()
{
	printf("Do something interesting");
}
